fix spacing

--- a/_source/_sass/partials/components/_work-single.scss
+++ b/_source/_sass/partials/components/_work-single.scss
@@ -25,6 +25,9 @@
   margin: 0 auto 2em auto;
   max-width: 65%;
   text-align: center;
+  p {
+    margin: 2em 0;
+  }
 }
 
 .work-single__link {
